fixed alignment

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -369,7 +369,6 @@ transition: color .3s ease, background .3s ease;
 .we_off h3 {
     font-size: 1.5em;
     color: #3b4854;
-    margin-left: 94px;
     margin-top: 32px;
     font-family: -webkit-body;
     font-weight: bold;
@@ -1046,7 +1045,7 @@ body {
   width: 9em;
   padding: 12px;
   margin: 15px auto 0;
-    margin-bottom: 15px;
+  margin-bottom: 15px;
   color: #c52128;
   border: 2px solid #c52128;
   border-radius: 4em;
@@ -1059,6 +1058,7 @@ font-size: 24px;
 width: 9em;
 padding: 12px;
 margin: 15px auto 0;
+margin-bottom: 15px;
 color: #fff;
 background: #c52128;
 border: 2px solid #c52128;
